syntax = "proto3";

package integration_pack;

option go_package = "github.com/blinkops/blink-sdk/proto";

service Plugin {
  rpc HealthProbe(Empty) returns (HealthStatus) {}

  rpc Describe(Empty) returns (PluginDescription) {}
  rpc GetActions(Empty) returns (ActionList) {}
  rpc ExecuteAction(ExecuteActionRequest) returns (ExecuteActionResponse) {}
  rpc TestCredentials(TestCredentialsRequest) returns (TestCredentialsResponse) {}
}

message Empty {}

message HealthStatus {
  int64 last_use = 1;
}

message PluginDescription {
  string name = 1;
  string description = 2;
  repeated string tags = 3;
  string provider = 4;
  repeated Action actions = 5;
  string image = 6;
  map<string, Connection> connections = 7;
  string version = 8;

  enum PluginType {
    SHARED = 0;
    PRIVATE = 1;
  }

  PluginType plugin_type = 9;
  string icon_uri = 10;
  bool is_connection_optional = 11;
}

message ActionParameter {
  FormField field = 1;
}

message Output {
  string table = 1;
  repeated Field fields = 2;
}

message Field {
  string name = 1;
  string type = 2;
}

message Action {
  string name = 1;
  string description = 2;
  bool active = 3;
  repeated ActionParameter parameters = 4;
  Output output = 5;
  string display_name = 6;
  string icon_uri = 7;
  string collection_name = 8;
  map<string, Connection> connections = 9;
  string is_connection_optional = 11;
}

message ActionList {
  repeated Action actions = 1;
}

message ExecuteActionRequest {
  string name = 1;
  map<string, string> parameters = 2;

  bytes context = 3;
  map<string, ConnectionInstance> connections = 4;
  int32 timeout = 5;
}

message ExecuteActionResponse {
  int64 error_code = 1;
  bytes result = 2;
  repeated Row rows = 3;

  bytes context = 4;
  bytes log_buffer = 5;
  string error_message = 6;
}

message Row {
  map<string, string> data = 1;
}

message Connection {
  string name = 1;
  map<string, ConnectionField> fields = 2;
  string reference = 3;
}

message ConnectionField {
  FormField field = 1;
}

message FormField {
  string name = 1;
  string type = 2;
  string input_type = 3;
  bool required = 4;
  string description = 5;
  string placeholder = 6;
  string default = 7;
  string pattern = 8;
  repeated string options = 9;
  int64 index = 10;
  string format = 11;
  bool is_multi = 12;
  string display_name = 13;
}

message ConnectionInstance {
  string name = 2;
  string id = 4;
  map<string, string> data = 6;
}

message TestCredentialsRequest {
  map<string, ConnectionInstance> connections = 1;
}

message TestCredentialsResponse {
  bool are_credentials_valid = 1;
  bytes raw_validation_response = 2;
}
