syntax = "proto3";

package integration_pack;

option go_package = "github.com/blinkops/blink-sdk/proto";

service Plugin {
  rpc Describe(Empty) returns (PluginDescription) {}
  rpc GetActions(Empty) returns (ActionList) {}
  rpc ExecuteAction(ExecuteActionRequest) returns (ExecuteActionResponse) {}
  rpc TestCredentials(TestCredentialsRequest) returns (TestCredentialsResponse) {}
}

message Empty {}

message PluginDescription {
  string name = 1;
  string description = 2;
  repeated string tags = 3;
  string provider = 4;
  repeated Action actions = 5;
  string image = 6;
  map<string, Connection> connections = 7;
  string version = 8;
}

message ActionParameter {
  string name = 1;
  string type = 2;
  string description = 3;
  bool required = 4;
  string default = 5;
}

message Output {
  string table = 1;
  repeated Field fields = 2;
}

message Field {
  string name = 1;
  string type = 2;
}

message Action {
  string name = 1;
  string description = 2;
  bool active = 3;
  repeated ActionParameter parameters = 4;
  Output output = 5;
}

message ActionList {
  repeated Action actions = 1;
}

message ExecuteActionRequest {
  string name = 1;
  map<string, string> parameters = 2;

  bytes context = 3;
  map<string, ConnectionInstance> connections = 4;
}

message ExecuteActionResponse {
  int64 error_code = 1;
  bytes result = 2;
  repeated Row rows = 3;

  bytes context = 4;
  bytes log_buffer = 5;
}

message Row {
  map<string, string> data = 1;
}

message Connection {
  string name = 1;
  map<string, ConnectionField> fields = 2;
  string reference = 3;
}

message ConnectionField {
  string name = 1;
  string type = 2;
  bool required = 3;
  string place_holder = 4;
  string input_type = 5;
  string patterns = 6;

  repeated string values = 7;
}

message ConnectionInstance {
  string vault_url = 1;
  string name = 2;
  string id = 4;
  string token = 5;
}

message TestCredentialsRequest {
  map<string, ConnectionInstance> connections = 1;
}

message TestCredentialsResponse {
  bool are_credentials_valid = 1;
  bytes raw_validation_response = 2;
}
